[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/world/maps/iceland.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/environments/below.tres" type="Environment" id=4]
[ext_resource path="res://scripts/cameras_&_ui/sub_viewport.gd" type="Script" id=7]
[ext_resource path="res://scripts/cameras_&_ui/updating_camera.gd" type="Script" id=8]
[ext_resource path="res://scripts/world/main_light.gd" type="Script" id=12]
[ext_resource path="res://scripts/cameras_&_ui/menu_viewport_container.gd" type="Script" id=14]
[ext_resource path="res://scripts/cameras_&_ui/sliders/volume.gd" type="Script" id=31]
[ext_resource path="res://resources/theme/main.theme" type="Theme" id=37]

[node name="Current" type="AspectRatioContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
ratio = 1.778

[node name="SoundMenu" type="Control" parent="."]
margin_top = 0.0224915
margin_right = 640.0
margin_bottom = 359.978

[node name="ViewportContainer" type="ViewportContainer" parent="SoundMenu"]
anchor_right = 0.618
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
stretch = true
script = ExtResource( 14 )

[node name="Viewport" type="Viewport" parent="SoundMenu/ViewportContainer"]
size = Vector2( 385, 349 )
own_world = true
handle_input_locally = false
render_target_update_mode = 3
shadow_atlas_size = 4096
script = ExtResource( 7 )

[node name="Camera" type="Camera" parent="SoundMenu/ViewportContainer/Viewport"]
transform = Transform( 0.987159, 0, -0.159743, 0, 1, 0, 0.159743, 0, 0.987159, 23.2897, 99.6438, 753.131 )
environment = ExtResource( 4 )
fov = 75.0
far = 2500.0
script = ExtResource( 8 )

[node name="Map" parent="SoundMenu/ViewportContainer/Viewport" instance=ExtResource( 1 )]

[node name="DirectionalLight" type="DirectionalLight" parent="SoundMenu/ViewportContainer/Viewport"]
transform = Transform( 0.624507, 0.2056, 0.753472, -0.764351, -0.0373541, 0.643718, 0.160493, -0.977923, 0.133822, -366.446, 151.616, -1016.59 )
light_color = Color( 0.831373, 0.964706, 1, 1 )
light_energy = 0.2
shadow_enabled = true
directional_shadow_mode = 2
directional_shadow_fade_start = 0.9
directional_shadow_bias_split_scale = 1.0
directional_shadow_depth_range = 1
directional_shadow_max_distance = 324.0
script = ExtResource( 12 )

[node name="ColorRect" type="ColorRect" parent="SoundMenu"]
anchor_left = 0.618
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -6.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
color = Color( 0, 0, 0, 0.603922 )

[node name="Sliders" type="ScrollContainer" parent="SoundMenu"]
anchor_left = 0.618
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
theme = ExtResource( 37 )
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="SoundMenu/Sliders"]
margin_right = 234.48
margin_bottom = 349.955
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="SoundEffectsVolumeLabel" type="Label" parent="SoundMenu/Sliders/VBoxContainer"]
margin_top = 125.0
margin_right = 234.0
margin_bottom = 148.0
text = "Sound FX Volume: 50"
autowrap = true

[node name="SoundEffectsVolumeSlider" type="HSlider" parent="SoundMenu/Sliders/VBoxContainer"]
margin_top = 152.0
margin_right = 234.0
margin_bottom = 172.0
focus_neighbour_top = NodePath("../MusicVolumeSlider")
theme = ExtResource( 37 )
value = 50.0
rounded = true
scrollable = false
script = ExtResource( 31 )

[node name="MusicVolumeLabel" type="Label" parent="SoundMenu/Sliders/VBoxContainer"]
margin_top = 176.0
margin_right = 234.0
margin_bottom = 199.0
text = "Music Volume: 50"
autowrap = true

[node name="MusicVolumeSlider" type="HSlider" parent="SoundMenu/Sliders/VBoxContainer"]
margin_top = 203.0
margin_right = 234.0
margin_bottom = 223.0
focus_neighbour_bottom = NodePath("../SoundEffectsVolumeSlider")
theme = ExtResource( 37 )
value = 50.0
rounded = true
scrollable = false
script = ExtResource( 31 )
audio_bus = 2

[connection signal="value_changed" from="SoundMenu/Sliders/VBoxContainer/SoundEffectsVolumeSlider" to="SoundMenu/Sliders/VBoxContainer/SoundEffectsVolumeSlider" method="_on_SoundEffectsVolumeSlider_value_changed"]
[connection signal="value_changed" from="SoundMenu/Sliders/VBoxContainer/MusicVolumeSlider" to="SoundMenu/Sliders/VBoxContainer/MusicVolumeSlider" method="_on_MusicVolumeSlider_value_changed"]
